<resources>
    <string name="app_name">Eco Mail</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_rect">Navigation</string>
    <string name="title_folder">Folder</string>
    <string name="title_offers">Offers</string>
    <string name="title_setting">Setting</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="forgotinstr">Please enter your email addres. You will recive
a link to create a new password via email.</string>

    <string name="forgotdonestr">We sent an email with instructions for resetting
your password</string>


</resources>
