<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_email_black_24dp"
        android:title="@string/title_inbox" />

    <item
        android:id="@+id/navigation_rect"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/title_rect" />


   <item
       android:id="@+id/navigation_folder"
       android:icon="@drawable/ic_folder_black_24dp"
       android:title="@string/title_folder" />


    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        android:title="@string/title_offers" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_setting" />






</menu>
